--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-color: sky blue;
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
